# django-filtering

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/django_filtering/: __init__.py  conf.py  filters.py  filterset.py  form.py  query.py  schema.py  schemas.py  utils.py
src/django_filtering/form/: form.py
src/django_filtering/forms/: fields.py  forms.py  widgets.py
src/django_filtering/templates/django_filtering/forms/widgets/: date_range.html
tests/: test_filters.py  test_filterset.py  test_form.py  test_query.py  test_schema.py  test_schemas.py  test_utils.py
tests/filterset/: test_declarative.py  test_imperative.py  test_mixed.py
tests/forms/: test_fields.py  test_forms.py  test_widgets.py
tests/lab_app/: filters.py  models.py  utils.py
tests/market_app/: filters.py  models.py
