[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-filtering"
version = "0.6.0"
license = "GPL-3.0"
authors = [
  { name = "The Shadowserver Foundation" },
  { name = "Michael Mulich", email = "michael@mulich.com" },
]
description = "Allows users to filter Django models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Framework :: Django",
  "Framework :: Django :: 4",
  "Framework :: Django :: 5",
]
dependencies = ["django>=4.2", "jsonschema"]

[project.optional-dependencies]
tests = ["pytest", "pytest-django", "pytest-mock", "ipdb", "model_bakery"]

[project.urls]
Homepage = "https://github.com/The-Shadowserver-Foundation/django-filtering"
Issues = "https://github.com/The-Shadowserver-Foundation/django-filtering/issues"

[tool.hatch.build.targets.sdist]
artifacts = ["src/django_filtering/templates"]
exclude = [".*/*"]

[tool.hatch.build.targets.wheel]
artifacts = ["src/django_filtering/templates"]
only-packages = true

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "-vv --pdbcls=IPython.terminal.debugger:TerminalPdb"


[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
# Allow whatever quoting makes sense for the situation.
quote-style = "preserve"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C",
]
ignore = [ "F403", "SIM108" ]

[tool.ruff.lint.isort]
# Use a double line break after each import block.
lines-after-imports = 2
